Fundamentos - Papel do CSS

--- a/desafio1/index.html
+++ b/desafio1/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PORTAL DE NOTICIAS BRUXOSAS</title>
+    <link rel="stylesheet" href="./styles/card.css">
 </head>
 <body>
 
     <div class="container">
         <div class="card">
             <div class="card__left">
-                <span>Flavio Milani</span>
+                <span>por Flavio Milani</span>
                 <h1>Equipe B99 convoca Devs</h1>
                 <p>Capitão Holt procura desenvolvedores que saibam trabalhar com components</p>
             </div>
