--- a/desafio1/index.html
+++ b/desafio1/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PORTAL DE NOTICIAS BRUXOSAS</title>
     <link rel="stylesheet" href="./styles/card.css">
-    <script src="./src/components/cardNews.js" defer></script>
+    <script src="./src/components/CardNews.js" defer></script>
+    <script src="./src/components/TituloDinamico.js"></script>
 </head>
 <body>
 
@@ -24,5 +25,6 @@
     </div>
 
     <card-news></card-news>
+    <titulo-dinamico></titulo-dinamico>
 </body>
 </html>
