--- a/desafio1/index.html
+++ b/desafio1/index.html
@@ -6,7 +6,7 @@
     <title>PORTAL DE NOTICIAS BRUXOSAS</title>
     <link rel="stylesheet" href="./styles/card.css">
     <script src="./src/components/CardNews.js" defer></script>
-    <script src="./src/components/TituloDinamico.js"></script>
+    <script src="./src/components/TituloDinamico.js" defer></script>
 </head>
 <body>
 
@@ -25,6 +25,8 @@
     </div>
 
     <card-news></card-news>
-    <titulo-dinamico></titulo-dinamico>
+    <titulo-dinamico titulo="Maria Cecilia"></titulo-dinamico>
+    <titulo-dinamico titulo="Flavio"></titulo-dinamico>
+    <titulo-dinamico titulo="Jullya"></titulo-dinamico>
 </body>
 </html>
