Criando components - Criando props e styles

--- a/desafio1/index.html
+++ b/desafio1/index.html
@@ -10,20 +10,18 @@
 </head>
 <body>
 
-    <div class="container">
-        <div class="card">
-            <div class="card__left">
-                <span>por Flavio Milani</span>
-                <h1>Equipe B99 convoca Devs</h1>
-                <p>Capitão Holt procura desenvolvedores que saibam trabalhar com components</p>
-            </div>
+    <card-news 
+        author="Maria"
+        title = "Equipe B99 convoca Devs"
+        url-link = "https://www.youtube.com/"
+        content = "Capitão Holt procura desenvolvedores que saibam trabalhar com components"
+        notice-img = "assets/image/b99-equip.jpg";
+    ></card-news>
 
-            <div class="card__right">
-                <img src="assets/image/b99-equip.jpg" alt="">
-            </div>
-        </div>
-    </div>
-
-    <card-news></card-news>
+    <card-news
+        title = "Peralta alega que components são tops"
+        url-link = "https://www.google.com/"
+        content = "Após sua declaração, todos ficam interessados no assunto"
+    ></card-news>
 </body>
 </html>
